# src/controllers/TeamController.ts
@@ -9,18 +9,20 @@ import { GameModel } from "../models/Game";
 export default class TeamController {
 
   @Post("/create")
-  public async create(@Body() body: { name: string; description: string; teamType: string; }): Promise<string> {
+  public async create(@Body() body: { name: string; description: string; teamType: string; image1: string; image2: string; }): Promise<string> {
     const data = new TeamModel({
       name: body.name,
       description: body.description,
       teamType: body.teamType,
-    })
+      image1: body.image1,
+      image2: body.image2
+    });
 
     try {
-      await data.save()
-      return "OK"
+      await data.save();
+      return "OK";
     } catch (error) {
-      return JSON.stringify(error)
+      return JSON.stringify(error);
     }
   }
 
